[package]
name = "tu"
version = "0.4.0"
description = "CLI tool to convert a natural language date/time string to UTC"
repository = "https://github.com/ad-si/tu"
categories = [
  "command-line-utilities",
  "text-processing",
  "parser-implementations",
]
keywords = ["date", "time", "utc", "nlp", "cli"]
license = "ISC"
edition = "2021"

[dependencies]
chrono = "0.4.35"
scanlex = "0.1.2"

# TODO: Use upstream crate `chrono-english` after this PR is merged:
#       https://github.com/stevedonovan/chrono-english/pull/30
#       Included code in `src/chrono-english` is based on:
#       https://github.com/Nukesor/chrono-english/tree/main"
